# holograph

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.venv-packtest/: pyvenv.cfg
holograph/: cli.py  core.py  theme.py
holograph/charts/: __init__.py  bar.py  line.py
tests/: test_cli.py  test_graphs.py
